--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body{
    font-family: 'Poppins', sans-serif;
    margin: 0;
    width: 100%;
+   background-color: lightgray;
 }
 
 h1, h2{
@@ -16,10 +17,16 @@ h3 {
    color: #8005F2;
 }
 
+/* header */
+
+/* navigation and logo */
+
 nav {
    display: flex;
    width: 100%;
    justify-content: space-between;
+   background-color: white;
+   box-shadow: 0px 11px 24px -10px rgba(66, 68, 90, 1);
 }
 
 .navbar {
@@ -54,7 +61,44 @@ nav {
    object-fit: cover;
 }
 
+.hero{
+   width: 100vw;
+   height: 100vh;
+   background: url("assets/header-shoes.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+}
+
+.hero .titles{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding: 16px;
+}
+
+.hero h1, .hero p{
+   margin: 0;
+   text-transform: uppercase;
+   color: white;
+}
+.hero p{
+   font-weight: 400;
+}
+
 /* button start */
+
+.element{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+}
 
 .button{
    width: auto;
@@ -109,33 +153,37 @@ nav {
 
 .link:hover{
    color: #8005F2;
+   font-weight: 600;
 }
 
 /* main start */
 
 main {
-   background-color: lightgray;
 }
 
-#hero {
+#main-title {
    padding: 5%;
    font-weight: 800;
+   font-size: 4vw;
 }
 
 /* Card start */
 
 .caroussel {
-   padding: 0 8% 10% 8%;
+   padding: 0 5% 10% 5%;
+   display: flex;
+   gap: 2vw;
 }
 
 .card{
    width: 32%;
+   height: auto;
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   border-radius: 32px;
+   border-radius: 7px;
    overflow: hidden;
    transition: all .3s ease-in-out;
    -webkit-box-shadow: 0px 11px 24px -10px rgba(66, 68, 90, 1);
@@ -159,7 +207,7 @@ main {
 }
 
 .description {
-   padding: 15px;
+   padding: 0 5% 5% 5%;
 }
 
 .titlesaux {
@@ -172,16 +220,16 @@ main {
 }
 
 p {
-   text-align: start;
+   text-wrap: wrap;
+   font-size: 1vw;
 }
 
 /* footer start */
 
 footer {
-   height: 20vh;
+   height: 8vh;
    display: flex;
    justify-content: center;
-   align-items: flex-end;
-   padding-bottom: 20px;
+   align-items: center;
    font-weight: 600;
 }  
