--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ h3 {
 
 nav {
    display: flex;
-   width: 100%;
+   height: 80px;
+   padding: 20px 100px;
    justify-content: space-between;
    background-color: white;
    box-shadow: 0px 11px 24px -10px rgba(66, 68, 90, 1);
@@ -34,6 +35,7 @@ nav {
    align-items: center;
    gap: 20px;
    list-style: none;
+   margin: 0;
 }
 
 #logo {
@@ -63,7 +65,7 @@ nav {
 
 .hero{
    width: 100vw;
-   height: 100vh;
+   height: calc(100vh - 80px);
    background: url("assets/header-shoes.jpg");
    background-repeat: no-repeat;
    background-size: cover;
