--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ nav {
 
 .hero{
    width: 100vw;
-   height: calc(100vh - 80px);
-   background: url("assets/header-shoes.jpg");
+   height: calc(100vh - 120px);
+   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("assets/header-shoes.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
